# atlas

./: .gitignore  CMakeLists.txt  README.md  build.sh  camera.h  fshader.fs  glad.c  main.cpp  obj_loader.h  perlin.h  shader.h  vshader.vs
lib/: glad.c  glad.h  stb_image.h
shaders/: depthShader.frag  depthShader.vert  objectShader.vert  vshader.vs
src/: camera.h  main.cpp  shader.h
terrain-generator.xcodeproj/: project.pbxproj
terrain-generator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
terrain-generator.xcodeproj/xcuserdata/liamhinzman.xcuserdatad/xcschemes/: xcschememanagement.plist
